@@ -134,12 +134,12 @@
                                         <div class='accountFrom'><select name='accountFrom' id='accountFrom' size='1'
                                                         style='text-align:right' required>
                                                         <option value='Revolut Current' selected>Revolut Current
-                                                        </option>{transactionLists["currency"]}
+                                                        </option>{transactionLists["accounts"]}
                                                 </select></div>&nbsp;|&nbsp; <div class='accountTo'><select
                                                         name='accountTo' id='accountTo' size='1' style='text-align:left'
                                                         required>
                                                         <option value='Expenses' selected>Expenses</option>
-                                                        {transactionLists["currency"]}
+                                                        {transactionLists["accounts"]}
                                                 </select></div>
                                 </div><br><br>
                                 <div class='meta'>
